--- a/practice09-event.html
+++ b/practice09-event.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="btns">
-      <button id="clickBtn">Click!</button>
+      <button id="clickBtn">Click</button>
       <button id="restarBtn">Restart</button>
     </div>
 
